--- a/about.html
+++ b/about.html
@@ -5,16 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <script
       src="https://kit.fontawesome.com/a454fa898f.js"
@@ -27,6 +22,11 @@
     />
   </head>
   <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
@@ -55,27 +55,26 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-3">Hello, I'm Amanda Walden</h1>
-            <h2 class="mb-3">Front-end Developer, based in the USA.</h2>
-            <p class="mb-3 about-me">
+            <h1 class="mb-4 about-me">Hello, I'm Amanda Walden</h1>
+            <h2 class="mb-1">Front-end Developer, based in the USA.</h2>
+            <p class="mb-3">
               I'm a Front-end Developer. My current job position is a Licensed
-              Massage Therapist at an Integrated Healthcare office. What I love
-              most about my current job is when I'm able to locate their problem
-              area and improve their quality of life. In my free time I had a
-              desire to learn some new skills and since all of my friends talked
-              about their careers in engineering it made me curious about what I
-              could do in tech. So I did some research and I came across coding.
-              I started trying to learn some different languages on Codecademy
-              and was doing it as a hobby during my free time. Then I realized
-              that coding could be a new career that would be fun and get paid
-              as well. After that realization, I began to research schools that
-              would prepare me for my new career. I decided on "SheCodes" to get
-              my training as a Front-end Developer. I'm extremely passionate and
-              would love to be able to do this job full-time. I'm having so much
-              fun learning the languages and I plan to continue learning. The
-              languages and coding tools I have learned are HTML5, CSS3,
-              Javascript5, API, Bootstrap, GitHub, Visual Studio Code, Flexbox,
-              SEO, Hosting and Responsive.
+              Massage Therapist at an Integrated Healthcare office. In my free
+              time I had a desire to learn some new skills and since all of my
+              friends talked about their careers in engineering it made me
+              curious about what I could do in tech. So I did some research and
+              I came across coding. I started trying to learn some different
+              languages on Codecademy and was doing it as a hobby during my free
+              time. Then I realized that coding could be a new career that would
+              be fun and get paid as well. After that realization, I began to
+              research schools that would prepare me for my new career. I
+              decided on "SheCodes" to get my training as a Front-end Developer.
+              I'm extremely passionate and would love to be able to do this job
+              full-time. I'm having so much fun learning the languages and I
+              plan to continue learning. The languages and coding tools I have
+              learned are HTML, CSS, Javascript, API, Bootstrap, GitHub, Visual
+              Studio Code, Flexbox, SEO, React, Node.js, SQL, Hosting and
+              Responsive.
             </p>
             <a href="/work.html" class="btn btn-branding" title="Amanda's Work"
               >See my projects</a
@@ -107,7 +106,7 @@
         </div>
       </div>
 
-      <div class="d-flex justify-content-center mb-5">
+      <div class="d-flex justify-content-center mb-3">
         <a
           href="mailto:awalden95@gmail.com"
           class="email-link"
